--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -53,7 +53,7 @@ layout: default
     🎓 PhD Opportunities with CSC Funding
     </h4>
     <p style="margin: 0;">
-    I am actively seeking motivated PhD students for 2025/2026 admission with <strong style="color: #138A4E;">CSC (China Scholarship Council)</strong> funding support. Join our LUMI lab and collaborate with world-class researchers. Please email me with your CV and transcripts (Subject: "CSC 2025 - Your Name") if interested. Early contact is encouraged for timely application preparation.
+    I am actively seeking motivated PhD students for 2026 admission with <strong style="color: #138A4E;">CSC (China Scholarship Council)</strong> funding support. Join our LUMI lab and collaborate with world-class researchers. Please email me with your CV and transcripts (Subject: "CSC 2026 - Your Name") if interested. Early contact is encouraged for timely application preparation.
     </p>
     </div>
 
