--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -64,7 +64,7 @@ layout: default
         <div class="news-legend" role="group" aria-label="Legend">
           <span class="badge-flag" data-conf="publication">Publication</span>
           <span class="badge-flag" data-conf="activity">Activity</span>
-          <span class="badge-flag" data-conf="funding">Funding</span>
+          <span class="badge-flag" data-conf="Grant">Grant</span>
         </div>
       </div>
 
