--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -63,8 +63,8 @@ layout: default
         <h2 id="news" class="news-title">News</h2>
         <div class="news-legend" role="group" aria-label="Legend">
           <span class="badge-flag" data-conf="publication">Publication</span>
-          <span class="badge-flag" data-conf="Honor">Honor</span>
-          <span class="badge-flag" data-conf="Grant">Grant</span>
+          <span class="badge-flag" data-conf="activity">activity</span>
+          <span class="badge-flag" data-conf="grant">grant</span>
         </div>
       </div>
 
